Fixed hero text-align

--- a/src/components/heroBanner.scss
+++ b/src/components/heroBanner.scss
@@ -2,6 +2,7 @@ h1 {
   font-family: 'myriad-pro', sans-serif;
   font-size: 3.5em;
   margin: 1em;
+  text-align:left;
 }
 
 #HeroImg {
